--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,13 +31,15 @@
             android:name=".EventsActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
-        <activity android:name=".DestinationDetailActivity"
+        <activity
+            android:name=".DestinationDetailActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"
-            />
-        <activity android:name=".GalleryActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".GalleryActivity"
             android:configChanges="orientation"
-            android:screenOrientation="landscape"/>
+            android:screenOrientation="landscape" />
+        <activity android:name=".VisitedActivity"></activity>
     </application>
 
 </manifest>
