--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".HomeActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait">
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,25 +21,20 @@
         </activity>
         <activity
             android:name=".DestinationsActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait" />
+             />
         <activity
             android:name=".FavouriteActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait" />
+            />
         <activity
             android:name=".EventsActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait" />
+          />
         <activity
             android:name=".DestinationDetailActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait" />
+            />
         <activity
             android:name=".GalleryActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="landscape" />
-        <activity android:name=".VisitedActivity"></activity>
+            />
+        <activity android:name=".VisitedActivity"/>
     </application>
 
 </manifest>
